# ChangeLog for app-shells/bash
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.353 2014/02/28 22:45:30 vapier Exp $

  28 Feb 2014; Mike Frysinger <vapier@gentoo.org> -bash-4.3_rc2.ebuild,
  bash-4.3.ebuild:
  Fix up doc install, delete a bit of debug code, keep the old src_unpack to
  avoid warnings when using patches, and use POSIX shell in pkg_* funcs.

*bash-4.3 (27 Feb 2014)

  27 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> +bash-4.3.ebuild:
  Version bump.

*bash-4.3_rc2 (31 Jan 2014)

  31 Jan 2014; Mike Frysinger <vapier@gentoo.org> +bash-4.3_rc2.ebuild:
  Version bump.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> bash-3.1_p17.ebuild,
  bash-3.2_p51.ebuild, bash-4.0_p38.ebuild, bash-4.1_p11.ebuild,
  bash-4.2_p45-r1.ebuild, bash-4.2_p45.ebuild:
  Add arm64 love.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> bash-4.2_p45.ebuild:
  Mark m68k stable.

*bash-4.2_p45-r1 (07 Jan 2014)

  07 Jan 2014; Mike Frysinger <vapier@gentoo.org> +bash-4.2_p45-r1.ebuild,
  +files/bash-4.2-read-retry.patch:
  Add workaround from upstream for read() under buggy BSD kernels #447810 by
  Yuta SATOH.

  07 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.2_p37.ebuild,
  -bash-4.2_p39.ebuild, -bash-4.2_p39-r1.ebuild, -bash-4.2_p42.ebuild,
  -files/bash-4.2-extglob-multibyte.patch, -files/bash-4.2-print-heredoc.patch:
  Removed old versions and files.

  22 Dec 2013; Mike Frysinger <vapier@gentoo.org>
  +files/autoconf-mktime-2.53.patch, -files/bash-3.0-configs.patch,
  -files/bash-3.0-etc-inputrc.patch, -files/bash-3.1-bash-logger.patch,
  bash-3.1_p17.ebuild, bash-3.2_p51.ebuild, bash-4.0_p38.ebuild,
  bash-4.1_p11.ebuild, files/bash-3.1-gentoo.patch:
  Move older versions into SLOTs for easier testing #479574 by Michał Górny.

  05 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.
