@@ -28,6 +28,10 @@ AUX bash-4.2-no-readline.patch 287 SHA256 f145706f0a83939575023929905199ac4359c9
 AUX bash-4.2-parallel-build.patch 4448 SHA256 1c5f7fb5c324d6f2b786ad259cc35bfdd3fe3087e778e4a5031277b33ca097c3 SHA512 44690ed868ed95b7949b21a308f402af64d46873a8eb023f44e3f12381719e66b5c123c75d496ccb3d51b10b7102ae041dc41d55131ff9835757731afb9f7711 WHIRLPOOL 70bf422d8207f08d15cfe95daf5b6ac264bd320c7544ee626efe0afdb751ebd4c953a59e39e44af85273cbdec3ebbd060597ab9ccfcc1b5b767fde4f6afa9916
 AUX bash-4.2-read-retry.patch 932 SHA256 37d60b456efd563960a9f1f3f40f0e7f6ef2f9aeb63d8dafabf13853f3d41987 SHA512 b8c9524a1385f8a66b964bc629ed62a1c825415e3388ac4204709440d3feedd5ffa92dd0fb54eab85283b0de49ce24a76836512b737612c0a4c45eb4ab40f8cb WHIRLPOOL b88a33ea5dd903f6049f79d96bd5975074e9b43bf21e5491cd8ccffc1649f4afcf48456b80bb99c3bc576c553c9bb99ca8ca831a85e936e82aef4aa39509a652
 AUX bash-4.2-speed-up-read-N.patch 2858 SHA256 8547d32535ed4e2fe5cb7b3503e6044c3f5df3772079509bd02cec4177059dcf SHA512 6b7f611ac35746c5ce8caad49def25d060397d81844c0dda2ba7c73f4b0318a28b3fb89f356695c8a7799b70ab0591d9612619403b7d4ade8aba1e60a933fdae WHIRLPOOL da9647b199f090b358b8186187d9ceff6cc5dd7cb20885f7963c1a1b445bf833093c2db931763a9c05f2e4b87e9e1c201bd34a441c49a39703eca7f3c61b2d49
+AUX bash-4.3-debug-trap.patch 770 SHA256 546af48fd2ca99a83e82fd517283e3605fee8b622eb3626ca01e7cf84fe228f9 SHA512 012940721baa35f236e5e5db3c01be7b70df5fc1203ea454d623736032fade04a3b495c967cd76be184dda749ab6b98d861c0ab3b1f92ce22993385cbb5149c1 WHIRLPOOL 63bbb66fd7be6ca14519522f838d7a4fef2aa288dcaba722053f01cd88c4cd6571c731a275ae72c138ed0d761b4c5e2db89b8f7e517d90f80ba39646811d1fef
+AUX bash-4.3-jobs-exit.patch 534 SHA256 5623ca32a1738503c3290ab2e8321007a272dff3bc4fee6e4675d6a667d61515 SHA512 7ea8cf2d1d348db8cdfaaa5160a8d9042c90ec1f0d65a912aec9f929c46e033ba0aa0f36331115795c8b2d354b368e777cce4cc23b643d1497a4fee9532f45b2 WHIRLPOOL 3011b6a57580014e248553e2f00e33887d8cfcc3711bc21bae4feccd1fd9b6c53257b7c38ebe7cf1ea71c4ab119e88bfc67c11556b5bff321a0fdd34e03c5eeb
+AUX bash-4.3-parse-ansi-expand.patch 919 SHA256 29b743a49020842ca5b250bcd8a82c60a5e0d9abcc1291a00d6dbd833554ee50 SHA512 0724f29c97c1c7060461a4cd8d60f6fac95e40a27d56223f2b3ed2d093c270cfb1e7ae4bc91e53f85cc5ca401118274c65a317ed5301947626ba88e2769c51e6 WHIRLPOOL efa6961d3798e58a2af7a854fb211c40f7df82b94abbe45eb202a856bfd943198e95fc9a6a8e9fc00a9e2236729f4514a2d49a33b5663f51986c104f0e47f849
+AUX bash-4.3-pcomplete-dequote.patch 1824 SHA256 99076a839ad00cf131138693a97f4e0ac35820ed2f6f0d2a2e187cf8d099d7a0 SHA512 91b179a2d287ba3ae5f8ea573b3a3ec80e38efda4fe40bb98a0a810303ac2f248e17d636749da247efdc999b4a82455105ee4d85efa5d201d0ead9f6b0b38442 WHIRLPOOL e9091cbe8a11fc6fc49268e18ea76efbd834fb7d39032b4de4a9697d09f91c34572072c4249ac297b314fffbd3b357e809dabb329c63106798af61022fc1f0e5
 AUX bash-4.x-deferred-heredocs.patch 1255 SHA256 845ffcd7035eef5dc029747f211a737e0260b53b16086a37fb3c8ab3609a7d36 SHA512 9016203189d0b601f0441daec19f902de7387b599a2196c475d76c596dcf9a9c22765a58e7fc5a3117522ec2722475bd166bea271ff3048f31674e8bed2901a0 WHIRLPOOL f3a2ef5245c446b7e90917e987d80efba5e6437dbe86fc27bbd7768bc5f1e5f6e7663b350ca8a81a3f21a29af6e1594c14061be0d818fce6a4a63aed7efcb6fe
 AUX bash_logout 205 SHA256 15aaded954389c05d7de5d36c4887db61975ad52c87ad78baf1062ec8997289d SHA512 7234250c03fc920996a381f9daef9e2d8ab1e1a29acdebed6669d8e0fe1c872a7fa343adf7d9ddc81225b0cd9eb223ba7ad1ff42448aff057fc6d6baa8f04a7d WHIRLPOOL 16242c8796af44f550f2935b37c770c022754c63db75b57fbe49d1a313b8651235619ead571cd70ae37f890c694d1c6b2e4871ec51345743eff8649782d0523b
 AUX bashrc 2870 SHA256 52715d113347ac51c63206697a48c341aceeddf7474eb6150e8fcea3f4163bdc SHA512 f841e6b3a28d78773bfc1118c6314c03bff4b0e8f5c8b334e156a299bcb64232c46c14c433b734cfbab2aa9faca8f94c2a10b76f8db8f1cdad81b35761ca5d2b WHIRLPOOL af08d0a5403bea70198d0a01443322594f36efdaec38e0183bb04a81fb5cde45ab6726720949364c8fb37f43af979cdaaf75ca184fdbfdde0f038ea13946ba24
@@ -208,23 +212,23 @@ EBUILD bash-4.0_p38.ebuild 4464 SHA256 d6aa599f3e77808c09095c892c684a5a589fa7db9
 EBUILD bash-4.1_p11.ebuild 4199 SHA256 b6163a5d4aef950e3b5dad8c2590323549072b9f8819a939eda692fefccfb38c SHA512 06b47daa5e875b03408f2acc8108d52275a4e4681a0f88b9bd89ee43fb6db3d963b54086d0039c4bae90916b5b059bfdb53288877ffe3d08a0d4a91bcde634e5 WHIRLPOOL bf23eed9aba5773e423171c89ebeff05106864a4a3507ed186d1cbfd8fe982fc53e081b389937aaa7d6ee6ea54a98ecfc618a6fe67170ac9600573054bee3a8f
 EBUILD bash-4.2_p45-r1.ebuild 6627 SHA256 4279e47b504a597dd6be4ecb6eef33c7909c8f6d226117dd0565f0d0835b7914 SHA512 76cef739863b630608ac416037d4ae273b1ee9eaeb5c65e1f5b9ea9c4d987460d9406ead515a5d85f87175b866ef194c839d1341b3cb3615b276c45cbdefec2f WHIRLPOOL 554c2b95883066936dab181f5540cfdae5f4c197bd37b34ff0a8be60398ef8e5285041e813d669cc5b4140aebf622441a35c86e0daa98d07c35bd5a332cbb211
 EBUILD bash-4.2_p45.ebuild 6525 SHA256 784442914f6f6740031598a0cf1baaec087d973e6460d76a32baa120a2794b8e SHA512 8b6c57dead7a18b429632694e5d1e35791b262cd09c3d49919287c2b07ab9e524b9a758e247a8d2706ddfae2576d19e535c9467b7ef99ed08ddb041ef60025da WHIRLPOOL 55954d5cb13b064f89305af8c5de0c7f84714afb08c0f07bf4703ef62860cf08f9e9f38ba60a4e891d5cb0f26f0e46d26e2eea553b0785bc9e82d790b6c4d111
-EBUILD bash-4.3.ebuild 6690 SHA256 12cd4251a50f9a5e988a7fe4dbcb89cc1580f912b997eb417ff5bb5e907a546d SHA512 09a6abf7c310a6b3b336b970574ce059a3462f4c40a6f50f8c55f6256f2cf6a91e92c103f368c0c6115559bdbaf2c3c087598e6931d97addeebac56be0bb45aa WHIRLPOOL 55e4b7d2aafe12942c602cbf12ea6db919cdd3a141a0d246810cdf963cde1c94b51f0231f9d1f6ab3cbe74a5aa27daeea884ef991ce4d5c2ccc62f2a3a0862f3
-MISC ChangeLog 54037 SHA256 a6c74ec9afe1b76b0c6ffaed977dedf34f6f8779df99a179ca3b2cdd2834c0a4 SHA512 d579cc7030ca46b8ca6002f475705df2ce7de2f2bdd9aeab23a01ac60c63fd7b7b463c5852cd20dfe8a31a1bd276ec966b512daa75fff5bda394de928fd5e807 WHIRLPOOL d1dfed0b45801d06ccc95ba1d4a25ae48a21d3759ff2d6efe2bcfd0d60ec4d3ccae39ce4c9771e1b35276488f796320c57e30f29d821754f574ca2631a8287d9
+EBUILD bash-4.3-r1.ebuild 6882 SHA256 130f11dad338861e51767beb833b2cbec385ea1210d3c1f659cece8e05ea483c SHA512 29c7c9da3ee504d9f14e9eee76aba3cf78503e03332af2c25dea90f4377c766553134293eac3e89ae3218dea37171f27760bb3814b5eed93875d828340d65ee0 WHIRLPOOL 71ab690267ee2234435bdfdb3c268d71315edac50839d685a0ccd47ddffca01e33ad22a1a608d4c6fe0aa04cbe1e1cc311dbf8e4788a94ac5f58f5cd7b8c3449
+MISC ChangeLog 54342 SHA256 d698ef269d80b70e32e1f85c80fea338e8d5f206805603de2ecf33021a451066 SHA512 b8feddfc6953e5e327145631d07e168262e9cc70cd800ac101ba511a72dba64a2d22ffa93f074bf664fb6d9803d85b939f7322f6cbe42c9db32bee03186080fd WHIRLPOOL 67d98e5a9dc394962e792b7c43b36c8986668b1c6e231f87860ee493fe8a855fede5e979b5e69a391b57b5820e6812120ba61f582a4c20d4f99459760d6babba
 MISC metadata.xml 643 SHA256 928c1ec952dec872f913d5e121725431435f651a87e48e784617c49f9dcf806a SHA512 3eb4baf0efbee2606a1e56d0359c3489887fb3f2e0dfe9ba25b6143b9d5e02b8df06a8065019201184b1fca12b8a86d781a68131810b80784c678765d55df679 WHIRLPOOL 52aeb839d294d5f43af735698afb6ee8f99e388c86260e1a1cc0d8fa57671bb8bef36f09d3f7e84cb70bc5fba0d645b427033c13b6ebbc66f5520acb1985b8b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTERGQAAoJEPGu1DbS6WIAUM4P/jfcBjWuOFzZcuzaTXNWGAno
-6uEKe6Bf4IJNqGv6KS/XNMb2lfReh6SJlWCrVFjwRutii2lLHJU9eM+A6MSae9pF
-UN/1lqjs5h1ci58NnVnCL9OGvZFhnUq/cP428AfqQ8USElh3UvlkYTgj8ErimrLI
-6N9rvP+Ye5fURyYqUOSpdBji/fdB+zYjiphBXibAs5n7KfdgHMhqheTtqF5lH9rE
-ZWhG9nwjFy/ObzMJ5/MTl0VaBy3EpfKTvnY5JjUa8X5cA4fGXrP23MMQrI+ZGjvF
-NTUTbuOsmskY+x3LrCdGaWYyJ/4APB8CnUCpN6SoHihMUTmBokuF6s+45D4yaAbO
-o2uRaUrBUGiYGnm+au8g9MO/B8rNvu+QcqGG0Lu/meZs/fSEMGiGZzxVvFTo52nj
-qbCFh4g8YiRfZ3D2vkejyE54X0ia2estcv/ubQb6aVFNJCB2Z5S5Uc8mYK3VqHnO
-QZVvi1nVDUIPa3DaYs1ZZJW1hc+Phtd1BUxBY+pZHR5hhxYm9i5Q6bd2Q3BUdTqr
-ZnftxrT7ZCftFmaNxqH25f3BxLrBzZu7No3OHY4YVYHuvdDn0LWCddmpn8pJ3/1H
-5s4amSdzoJ7LczBZlTIm3rzgXjaO+W+Xr3bPUXhSBevSdAWJpHOofmXsjRegat/Q
-XwJvs+ozIsMlaDTXhUyb
-=yeZM
+iQIcBAEBCAAGBQJTHRI6AAoJEPGu1DbS6WIARwIQAJkmXa5sj6ra/2QZXEdQyz0w
+PRPo+XgGQyxul0liNfCKBYAWzw5ppWDX2tFf4HHt17auD/XCGoOKqeu4xvI4zKfN
+QlD1jhZy2EYSl5tLZFfpkjqzIEmw5RJNK0JkM6FpXlo0wtE/oOf08htZnO+/MgBX
+4hlVOKVJR9elaWM9oER2fDdZEantGpbEpmsxdYCH0LIv8bl1fjmounOHUCwJWEnW
+OrEQOnBX8JEnBkgr9y389SRCXwU5OcFZ0rhT0J3WzjzuTxWAu5OO9dB9J7h036Ip
+/GGYm/WiMeNpRoUNSqaej076zOXw1O4f2O0Zpw6JhG87h6xfqeB/QfxNnXF2TR0W
+8iSDC2dyCdEWaeKARRAUJ2ctQ4+aRGSUj55VDdaCD9mjOaaYj7AcNClz2/i1odzq
+TIRZhNr6A8XYKQy29RW9Tw4+hiV8vlJl++tFl8vacwN9l6T00hNfkQen9ja8If55
+aLVOEyJx5jU5BhFCJ+qhS535bdejeKJiyYQw+9qHK8uHgdcNCUlTp9vMy1rzbHqs
+rK99PsY1FS7nTCG/B2loJDOrnyPF51Tp3PIKua3v9PjPz95/iTGFQdLy8uAjt0ci
+54eV8GYeS+aFPFoZ3CTY0MhfoJofqqlEVAun1WfTQO+CydLIPz3kFclYyJbRro8Z
+fcQYSdMMQOrrksYpUa8R
+=TglT
 -----END PGP SIGNATURE-----
