@@ -1,0 +1,34 @@
+fix from upstream
+
+https://lists.gnu.org/archive/html/bug-bash/2014-02/msg00090.html
+
+*** ../bash-4.3/trap.c	2014-02-05 10:03:21.000000000 -0500
+--- trap.c	2014-02-28 09:51:43.000000000 -0500
+***************
+*** 921,925 ****
+  
+  #if defined (JOB_CONTROL)
+!       save_pipeline (1);	/* XXX only provides one save level */
+  #endif
+  
+--- 921,926 ----
+  
+  #if defined (JOB_CONTROL)
+!       if (sig != DEBUG_TRAP)	/* run_debug_trap does this */
+! 	save_pipeline (1);	/* XXX only provides one save level */
+  #endif
+  
+***************
+*** 941,945 ****
+  
+  #if defined (JOB_CONTROL)
+!       restore_pipeline (1);
+  #endif
+  
+--- 942,947 ----
+  
+  #if defined (JOB_CONTROL)
+!       if (sig != DEBUG_TRAP)	/* run_debug_trap does this */
+! 	restore_pipeline (1);
+  #endif
+  
