@@ -1,0 +1,19 @@
+fix from upstream
+
+https://lists.gnu.org/archive/html/bug-bash/2014-03/msg00017.html
+
+*** ../bash-4.3/jobs.c	2014-01-10 09:05:34.000000000 -0500
+--- jobs.c	2014-03-02 18:05:09.000000000 -0500
+***************
+*** 4375,4379 ****
+  end_job_control ()
+  {
+!   if (interactive_shell)		/* XXX - should it be interactive? */
+      {
+        terminate_stopped_jobs ();
+--- 4375,4379 ----
+  end_job_control ()
+  {
+!   if (interactive_shell || job_control)		/* XXX - should it be just job_control? */
+      {
+        terminate_stopped_jobs ();
