@@ -1,0 +1,63 @@
+fix from upstream
+
+https://lists.gnu.org/archive/html/bug-bash/2014-03/msg00032.html
+
+*** ../bash-4.3/pcomplete.c	2013-08-26 15:23:45.000000000 -0400
+--- pcomplete.c	2014-03-07 13:12:42.000000000 -0500
+***************
+*** 184,187 ****
+--- 184,188 ----
+  COMPSPEC *pcomp_curcs;
+  const char *pcomp_curcmd;
++ const char *pcomp_curtxt;
+  
+  #ifdef DEBUG
+***************
+*** 754,757 ****
+--- 755,767 ----
+  	  dfn = (*rl_filename_dequoting_function) ((char *)text, rl_completion_quote_character);
+  	}
++       /* Intended to solve a mismatched assumption by bash-completion.  If
++ 	 the text to be completed is empty, but bash-completion turns it into
++ 	 a quoted string ('') assuming that this code will dequote it before
++ 	 calling readline, do the dequoting. */
++       else if (iscompgen && iscompleting &&
++ 	       pcomp_curtxt && *pcomp_curtxt == 0 &&
++ 	       text && (*text == '\'' || *text == '"') && text[1] == text[0] && text[2] == 0 && 
++ 	       rl_filename_dequoting_function)
++ 	  dfn = (*rl_filename_dequoting_function) ((char *)text, rl_completion_quote_character);
+        else
+  	dfn = savestring (text);
+***************
+*** 1523,1527 ****
+  {
+    COMPSPEC *cs, *oldcs;
+!   const char *oldcmd;
+    STRINGLIST *ret;
+  
+--- 1533,1537 ----
+  {
+    COMPSPEC *cs, *oldcs;
+!   const char *oldcmd, *oldtxt;
+    STRINGLIST *ret;
+  
+***************
+*** 1546,1552 ****
+--- 1556,1564 ----
+    oldcs = pcomp_curcs;
+    oldcmd = pcomp_curcmd;
++   oldtxt = pcomp_curtxt;
+  
+    pcomp_curcs = cs;
+    pcomp_curcmd = cmd;
++   pcomp_curtxt = word;
+  
+    ret = gen_compspec_completions (cs, cmd, word, start, end, foundp);
+***************
+*** 1554,1557 ****
+--- 1566,1570 ----
+    pcomp_curcs = oldcs;
+    pcomp_curcmd = oldcmd;
++   pcomp_curtxt = oldtxt;
+  
+    /* We need to conditionally handle setting *retryp here */
